# IMPACT

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: collateral_example.yaml  facility_example.yaml  obligor_example.yaml
configs/demo/: collateral_demo.yaml  custom_reporting.yaml  custom_risk.yaml  facility_demo.yaml  facility_demo_sqlite.yaml  facility_example.yaml  facility_sub_demo.yaml  obligor_demo.yaml
docs/: IMPACT_McKinsey.pptx  pitch_deck.md
notebooks/: entity_demo.ipynb
scripts/: generate_sample_data.py
src/impact/: __init__.py
src/impact/common/: __init__.py  exceptions.py  logging.py  utils.py
src/impact/entity/: __init__.py  pipeline.py  sub_entity.py
src/impact/entity/config/: __init__.py  merger.py  parser.py  schema.py
src/impact/entity/join/: __init__.py  engine.py  nesting.py
src/impact/entity/model/: __init__.py  builder.py
src/impact/entity/source/: __init__.py  base.py  csv_excel.py  parquet.py  registry.py  snowflake.py  sqlite.py
src/impact/entity/transform/: __init__.py  base.py  builtin.py  registry.py
src/impact/entity/validate/: __init__.py  base.py  builtin.py  registry.py
tests/: conftest.py
tests/unit/: test_builder_sub_entities.py  test_config_merger.py  test_config_parser.py  test_custom_spaces.py  test_debug_mode.py  test_diagnostics.py  test_entity_builder.py  test_expression_validation.py  test_flag_mode.py  test_join_engine.py  test_pipeline.py  test_pre_joins.py  test_range_exclusive.py  test_source_connectors.py  test_sub_entity.py  test_transforms.py  test_utils.py  test_validators.py
